# huawei-solar-lib

./: .codecov.yml  .coveragerc  .flake8  .gitignore  .gitlab-ci.yml  .isort.cfg  .pre-commit-config.yaml  .yamllint  README.md  bridge_tst.py  pyproject.toml  requirements.txt  requirements_test.txt  setup.cfg  setup.py  test.py  tox.ini
src/: huaweiinvertermodbus.py
src/huawei_solar/: __init__.py  bridge.py  const.py  exceptions.py  files.py  huawei_solar.py  modbus.py  mypy.ini  register_names.py  register_values.py  registers.py  utils.py
tests/: conftest.py  mock_huawei_solar.py  test__registers__peak_periods.py  test__registers__time_of_use.py  test_bridge.py  test_config.py  test_huawei_solar.py  test_registers.py
