[build-system]
requires = [
    "setuptools >= 48",
    "setuptools_scm[toml] >= 4, <6",
    "setuptools_scm_git_archive",
    "wheel >= 0.29.0",
]
build-backend = 'setuptools.build_meta'

[tool.setuptools_scm]
write_to = "src/huawei_solar/version.py"


[tool.black]
line-length = 120

[tool.isort]
# https://github.com/PyCQA/isort/wiki/isort-Settings
profile = "black"
line_length = 120
# will group `import x` and `from x import` of the same module.
force_sort_within_sections = true
known_first_party = [
    "huawei_solar",
    "tests",
]
forced_separate = [
    "tests",
]
combine_as_imports = true

[tool.pylint.master]
ignore = [
    "src/huawei_solar/__init__.py",
    "version.py"
]

[tool.pylint.messages_control]
max-line-length = 120
disable = "too-many-instance-attributes, too-many-arguments"

[pycodestyle]
max_line_length = 120
