[project]
name = "huawei-solar"
description = "A Python wrapper for the Huawei Inverter modbus TCP API"
readme = "README.md"

authors = [
  { name = "Emil Vanherp", email = "emil@vanherp.me" },
  { name = "Thijs Walcarius" },
]
license = { file="LICENSE.md" }
keywords = ["huawei", "solar", "sun2000", "inverter", "battery", "modbus", "modbus-tcp", "modbus-rtu"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Topic :: Home Automation",
    "Operating System :: OS Independent",

]

dynamic = ["version"]

requires-python = ">= 3.11"

dependencies = [
    "pymodbus>=3.11.0,<4",
    "pyserial-asyncio>=0.6",
    "backoff",
    "pytz",
]

[project.urls]
Homepage = "https://gitlab.com/EmilV2/huawei-solar"

[dependency-groups]

dev = [
    "tox>=4.15",
    "pre-commit",
]

test = [
    "pytest",
    "pytest-asyncio",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
path = "src/huawei_solar/version.py"


[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "ALL"
]

ignore = [
    "D203", # 1 blank line required before class docstring
    "D213", # Multi-line docstring summary should start at the second line

    "S101", # allow asserts
    "TRY003", # allow exceptions with longer messages.
]

pylint.max-args = 6

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "D",
    "S101", # asserts allowed in tests...
    "ANN201", 
    "ARG", # Unused function args -> fixtures nevertheless are functionally relevant...
    "FBT", # Don't care about booleans as positional arguments in tests, e.g. via @pytest.mark.parametrize()
    # The below are debatable
    "PLR2004", # Magic value used in comparison, ...
    "SLF001", # access to private members
    "N802"
]


# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]

[tool.pytest.ini_options]
asyncio_mode="auto"
