[metadata]
name = huawei-solar
description = A Python wrapper for the Huawei Inverter modbus TCP API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.com/EmilV2/huawei-solar
author = Emil Vanherp
author_email = emil@vanherp.me
license = MIT License
license_file = LICENSE.md
classifiers =
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir=
    =src
packages = find:
install_requires =
    pymodbus>=3.6.6,<3.7
    pyserial-asyncio>=0.6
    backoff
    pytz>=2023.3
python_requires = >=3.10
setup_requires =
    setuptools_scm

[flake8]
extend-ignore =
    # See https://github.com/PyCQA/pycodestyle/issues/373
    E203

[options.packages.find]
where=src

[options.extras_require]
test =
    tox >= 2.6.0
    pytest >= 3.0.3
    pytest-asyncio
    black
    pytest-cov
    flake8
    codecov
    mutmut
    pylint
